--- a/frontend/templates/resumes/resumes.html
+++ b/frontend/templates/resumes/resumes.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Resumes</h1>
+
+    <form action="{% url 'accounts:logout' %}" method="post">
+        {% csrf_token %}
+        <button class="dropdown-item" type="submit">Sign out</button>
+    </form>
 </body>
 </html>
