--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -185,13 +185,11 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
-          <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
         </ul>
         <form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
+          <a class="btn btn-outline-success mx-2" href="{% url 'accounts:login' %}" aria-disabled="true">Login</a>
         </form>
       </div>
     </div>
