--- a/frontend/templates/dashboard/dashboard.html
+++ b/frontend/templates/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html lang="en" data-bs-theme="dark">
   <head>
-    <script src="/docs/5.3/assets/js/color-modes.js"></script>
+    <script src="{% static "js/color-modes.js"%}"></script>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +24,7 @@
     />
 
     <link
-      href="/docs/5.3/dist/css/bootstrap.min.css"
+      href="{% static "dist/css/bootstrap.min.css"%}"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
@@ -143,7 +143,7 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="dashboard.css" rel="stylesheet" />
+    <link href="{% static "dist/css/dashboard.css"%}" rel="stylesheet" />
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -688,7 +688,7 @@
       </div>
     </div>
     <script
-      src="/docs/5.3/dist/js/bootstrap.bundle.min.js"
+      src="{% static "dist/js/bootstrap.bundle.min.js"%}"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
@@ -698,6 +698,6 @@
       integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
       crossorigin="anonymous"
     ></script>
-    <script src="dashboard.js"></script>
+    <script src="{% static "dist/js/dashboard.js"%}"></script>
   </body>
 </html>
