Fix dashboard css and js links

--- a/frontend/templates/dashboard/dashboard.html
+++ b/frontend/templates/dashboard/dashboard.html
@@ -1,7 +1,7 @@
 {% load static %}
 <html lang="en" data-bs-theme="dark">
   <head>
-    <script src="{% static "js/color-modes.js"%}"></script>
+    <script src="{% static 'js/color-modes.js' %}"></script>
 
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -24,7 +24,7 @@
     />
 
     <link
-      href="{% static "dist/css/bootstrap.min.css"%}"
+      href="{% static 'dist/css/bootstrap.min.css' %}"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
@@ -177,7 +177,7 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="{% static "dist/css/dashboard.css"%}" rel="stylesheet" />
+    <link href="{% static 'dashboard/dashboard.css' %}" rel="stylesheet" />
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -666,6 +666,6 @@
       integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
       crossorigin="anonymous"
     ></script>
-    <script src="{% static "dist/js/dashboard.js"%}"></script>
+    <script src="{% static 'dashboard/dashboard.js' %}"></script>
   </body>
 </html>
