Fix static 'dashboard' folder name

--- a/frontend/templates/dashboard/dashboard.html
+++ b/frontend/templates/dashboard/dashboard.html
@@ -177,7 +177,7 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="{% static 'dashboard/dashboard.css' %}" rel="stylesheet" />
+    <link href="{% static 'dashboards/dashboard.css' %}" rel="stylesheet" />
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -656,7 +656,7 @@
       </div>
     </div>
     <script
-      src="{% static "dist/js/bootstrap.bundle.min.js"%}"
+      src="{% static 'dist/js/bootstrap.bundle.min.js' %}"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
@@ -666,6 +666,6 @@
       integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
       crossorigin="anonymous"
     ></script>
-    <script src="{% static 'dashboard/dashboard.js' %}"></script>
+    <script src="{% static 'dashboards/dashboard.js' %}"></script>
   </body>
 </html>
