--- a/frontend/templates/resumes/resumes.html
+++ b/frontend/templates/resumes/resumes.html
@@ -24,7 +24,7 @@
     />
 
     <link
-      href="{% static "dist/css/bootstrap.min.css"%}"
+      href="{% static 'dist/css/bootstrap.min.css' %}"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
@@ -162,7 +162,7 @@
       rel="stylesheet"
     />
     <!-- Custom styles for this template -->
-    <link href="{% static "dist/css/dashboard.css"%}" rel="stylesheet" />
+    <link href="{% static 'dashboards/dashboard.css' %}" rel="stylesheet" />
   </head>
   <body>
     <svg xmlns="http://www.w3.org/2000/svg" class="d-none">
@@ -705,7 +705,7 @@
       </div>
     </div>
     <script
-      src="{% static "dist/js/bootstrap.bundle.min.js"%}"
+      src="{% static 'dist/js/bootstrap.bundle.min.js' %}"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
@@ -715,6 +715,6 @@
       integrity="sha384-eI7PSr3L1XLISH8JdDII5YN/njoSsxfbrkCTnJrzXt+ENP5MOVBxD+l6sEG4zoLp"
       crossorigin="anonymous"
     ></script>
-    <script src="{% static "dist/js/dashboard.js"%}"></script>
+    <script src="{% static 'dashboards/dashboard.js' %}"></script>
   </body>
 </html>
