--- a/frontend/templates/resumes/resumes.html
+++ b/frontend/templates/resumes/resumes.html
@@ -58,6 +58,7 @@
     <meta name="theme-color" content="#712cf9" />
 
     <style>
+      
       .bd-placeholder-img {
         font-size: 1.125rem;
         text-anchor: middle;
@@ -153,6 +154,28 @@
       
         .custom-button:hover {
           background-color: #0056b3; 
+        }
+
+        @media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
+
+.table-responsive {
+  margin-bottom: 1rem; /* Adjust margin bottom as needed */
+}
+
+.pagination {
+  margin-top: 1rem; /* Adjust margin top as needed */
+}
+.pagination {
+          margin-top: 20px;
+        }
+
+        .pagination-center {
+          display: flex;
+          justify-content: center;
         }
     </style>
 
@@ -440,31 +463,26 @@
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center gap-2" href="#">
                     <svg class="bi"><use xlink:href="#file-earmark"></use></svg>
-                    Orders
+                    Resumes
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center gap-2" href="#">
-                    <svg class="bi"><use xlink:href="#cart"></use></svg>
-                    Products
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-building-up" viewBox="0 0 16 16">
+                      <path d="M12.5 16a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7m.354-5.854 1.5 1.5a.5.5 0 0 1-.708.708L13 11.707V14.5a.5.5 0 0 1-1 0v-2.793l-.646.647a.5.5 0 0 1-.708-.708l1.5-1.5a.5.5 0 0 1 .708 0"/>
+                      <path d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v6.5a.5.5 0 0 1-1 0V1H3v14h3v-2.5a.5.5 0 0 1 .5-.5H8v4H3a1 1 0 0 1-1-1z"/>
+                      <path d="M4.5 2a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-6 3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm-6 3a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm3 0a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z"/>
+                    </svg>
+                    Companies
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center gap-2" href="#">
-                    <svg class="bi"><use xlink:href="#people"></use></svg>
-                    Customers
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
-                    <svg class="bi"><use xlink:href="#graph-up"></use></svg>
-                    Reports
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
-                    <svg class="bi"><use xlink:href="#puzzle"></use></svg>
-                    Integrations
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-person-circle" viewBox="0 0 16 16">
+                      <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                      <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                    </svg>
+                    Your Profile
                   </a>
                 </li>
               </ul>
@@ -472,13 +490,15 @@
               <h6
                 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-body-secondary text-uppercase"
               >
-                <span>Saved reports</span>
+                <span>Pinned Resumes</span>
                 <a
                   class="link-secondary"
                   href="#"
                   aria-label="Add a new report"
                 >
-                  <svg class="bi"><use xlink:href="#plus-circle"></use></svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-pin" viewBox="0 0 16 16">
+                  <path d="M4.146.146A.5.5 0 0 1 4.5 0h7a.5.5 0 0 1 .5.5c0 .68-.342 1.174-.646 1.479-.126.125-.25.224-.354.298v4.431l.078.048c.203.127.476.314.751.555C12.36 7.775 13 8.527 13 9.5a.5.5 0 0 1-.5.5h-4v4.5c0 .276-.224 1.5-.5 1.5s-.5-1.224-.5-1.5V10h-4a.5.5 0 0 1-.5-.5c0-.973.64-1.725 1.17-2.189A6 6 0 0 1 5 6.708V2.277a3 3 0 0 1-.354-.298C4.342 1.674 4 1.179 4 .5a.5.5 0 0 1 .146-.354m1.58 1.408-.002-.001zm-.002-.001.002.001A.5.5 0 0 1 6 2v5a.5.5 0 0 1-.276.447h-.002l-.012.007-.054.03a5 5 0 0 0-.827.58c-.318.278-.585.596-.725.936h7.792c-.14-.34-.407-.658-.725-.936a5 5 0 0 0-.881-.61l-.012-.006h-.002A.5.5 0 0 1 10 7V2a.5.5 0 0 1 .295-.458 1.8 1.8 0 0 0 .351-.271c.08-.08.155-.17.214-.271H5.14q.091.15.214.271a1.8 1.8 0 0 0 .37.282"/>
+                </svg>
                 </a>
               </h6>
               <ul class="nav flex-column mb-auto">
@@ -487,7 +507,7 @@
                     <svg class="bi">
                       <use xlink:href="#file-earmark-text"></use>
                     </svg>
-                    Current month
+                    Resume 1
                   </a>
                 </li>
                 <li class="nav-item">
@@ -495,29 +515,20 @@
                     <svg class="bi">
                       <use xlink:href="#file-earmark-text"></use>
                     </svg>
-                    Last quarter
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
-                    <svg class="bi">
-                      <use xlink:href="#file-earmark-text"></use>
-                    </svg>
-                    Social engagement
-                  </a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
-                    <svg class="bi">
-                      <use xlink:href="#file-earmark-text"></use>
-                    </svg>
-                    Year-end sale
+                    Resume 2
                   </a>
                 </li>
               </ul>
 
               <hr class="my-3" />
-
+              <ul class="nav flex-column mb-auto">
+                <li class="nav-item">
+                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-life-preserver" viewBox="0 0 16 16">
+                      <path d="M8 16A8 8 0 1 0 8 0a8 8 0 0 0 0 16m6.43-5.228a7.03 7.03 0 0 1-3.658 3.658l-1.115-2.788a4 4 0 0 0 1.985-1.985zM5.228 14.43a7.03 7.03 0 0 1-3.658-3.658l2.788-1.115a4 4 0 0 0 1.985 1.985zm9.202-9.202-2.788 1.115a4 4 0 0 0-1.985-1.985l1.115-2.788a7.03 7.03 0 0 1 3.658 3.658m-8.087-.87a4 4 0 0 0-1.985 1.985L1.57 5.228A7.03 7.03 0 0 1 5.228 1.57zM8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6"/>
+                    </svg>
+                    Support
+                  </a>
               <ul class="nav flex-column mb-auto">
                 <li class="nav-item">
                   <a class="nav-link d-flex align-items-center gap-2" href="#">
@@ -527,10 +538,18 @@
                     Settings
                   </a>
                   <li class="nav-item">
-                    <a class="nav-link d-flex align-items-center gap-2" href="{% url 'home' %}">
-                        <svg class="bi"><use xlink:href="#door-closed"></use></svg>
-                        Sign out
-                    </a>
+                    <!-- Add an id to the form for easy reference -->
+<form id="sign-out-form" method="POST" action="{% url 'home' %}">
+  <!-- Add CSRF token for security -->
+  {% csrf_token %}
+  <input type="hidden" name="sign_out" value="true"> <!-- Add a hidden input field to indicate sign out -->
+  <button type="submit" class="nav-link d-flex align-items-center gap-2" style="border: none; background: none;">
+    <svg class="bi"><use xlink:href="#door-closed"></use></svg>
+    Sign out
+  </button>
+</form>
+                        
+                  
                 </li>         
               </ul>
             </div>
@@ -569,8 +588,8 @@
             style="
               display: block;
               box-sizing: border-box;
-              height: 228px;
-              width: 540px;
+              height: 0px;
+              width: 0px;
             "
           ></canvas>
 
@@ -586,18 +605,136 @@
                 </tr>
               </thead>
               <tbody>
-                {% for resume in resumes %}
                 <tr>
-                  <td>{{ forloop.counter }}</td>
+                  <td>1,001</td>
                   <td>random</td>
                   <td>data</td>
                   <td>placeholder</td>
-                  <td><a href="{% url 'resumes:resume' slug=resume.slug %}" class="custom-button">Click Here</a></td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
                 </tr>
-                {% endfor %}
+                <tr>
+                  <td>1,002</td>
+                  <td>placeholder</td>
+                  <td>irrelevant</td>
+                  <td>visual</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,003</td>
+                  <td>data</td>
+                  <td>rich</td>
+                  <td>dashboard</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,003</td>
+                  <td>information</td>
+                  <td>placeholder</td>
+                  <td>illustrative</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,004</td>
+                  <td>text</td>
+                  <td>random</td>
+                  <td>layout</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,005</td>
+                  <td>dashboard</td>
+                  <td>irrelevant</td>
+                  <td>text</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,006</td>
+                  <td>dashboard</td>
+                  <td>illustrative</td>
+                  <td>rich</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,007</td>
+                  <td>placeholder</td>
+                  <td>tabular</td>
+                  <td>information</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,008</td>
+                  <td>random</td>
+                  <td>data</td>
+                  <td>placeholder</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,009</td>
+                  <td>placeholder</td>
+                  <td>irrelevant</td>
+                  <td>visual</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,010</td>
+                  <td>data</td>
+                  <td>rich</td>
+                  <td>dashboard</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,011</td>
+                  <td>information</td>
+                  <td>placeholder</td>
+                  <td>illustrative</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,012</td>
+                  <td>text</td>
+                  <td>placeholder</td>
+                  <td>layout</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,013</td>
+                  <td>dashboard</td>
+                  <td>irrelevant</td>
+                  <td>text</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,014</td>
+                  <td>dashboard</td>
+                  <td>illustrative</td>
+                  <td>rich</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
+                <tr>
+                  <td>1,015</td>
+                  <td>random</td>
+                  <td>tabular</td>
+                  <td>information</td>
+                  <td><button class="custom-button" onclick="window.location.href='/resumes'">Click Here</button></td>
+                </tr>
               </tbody>
             </table>
           </div>
+          <!-- Pagination -->
+    <nav aria-label="Page navigation">
+      <ul class="pagination justify-content-center mt-4">
+          <li class="page-item disabled">
+              <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+          </li>
+          <li class="page-item"><a class="page-link" href="#">1</a></li>
+          <li class="page-item"><a class="page-link" href="#">2</a></li>
+          <li class="page-item"><a class="page-link" href="#">3</a></li>
+          <li class="page-item">
+              <a class="page-link" href="#">Next</a>
+          </li>
+      </ul>
+  </nav>
+
         </main>
       </div>
     </div>
@@ -613,5 +750,15 @@
       crossorigin="anonymous"
     ></script>
     <script src="{% static 'dashboards/dashboard.js' %}"></script>
+    <!-- JavaScript to submit the form when the link is clicked -->
+<script>
+  document.addEventListener("DOMContentLoaded", function() {
+    document.getElementById("sign-out-form").addEventListener("submit", function(event) {
+      event.preventDefault(); // Preventing default form submission
+      // for adding any additional logic here before submitting the form, if needed
+      this.submit(); // Submiting the form
+    });
+  });
+  </script>
   </body>
 </html>
