--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -1,8 +1,9 @@
 {% load static %}
+<bootstrap class="myCarousel"></bootstrap>
 <!doctype html>
 <html lang="en" data-bs-theme="light">
 
-  <head><script src="{% static 'js/color-modes.js' %}"></script>
+  <head><script src="{% static 'js/color-modes.js'%}"></script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,7 +18,18 @@
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@docsearch/css@3">
 
-<link href="{% static 'dist/css/bootstrap.min.css' %}" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+    <link
+      href="{% static 'dist/css/bootstrap.min.css' %}"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+
+    <script
+      src="{% static 'dist/js/bootstrap.bundle.min.js' %}"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
 
 
     <!-- Favicons -->
@@ -110,6 +122,7 @@
     </style>
 
 
+    <!-- Custom styles for this template -->
     <link href="{% static 'css/carousel.css' %}" rel="stylesheet">
   </head>
   <body>
@@ -327,9 +340,12 @@
     <p>&copy; 2024 ResumeHub, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
   </footer>
 </main>
-<script src="{% static 'dist/js/bootstrap.bundle.min.js' %}" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
-
+ <!--<script>
+  $(document).ready(function(){
+      $('.carousel').carousel();
+  });
+</script> > -->
 
 
     </body>
