added offset at top

--- a/frontend/templates/dashboard/dashboard.html
+++ b/frontend/templates/dashboard/dashboard.html
@@ -167,6 +167,7 @@
   }
   
   .sidebar {
+    top: 50px;
     height: 100%; /* Set sidebar height to fill available space */
     position: fixed; /* Position the sidebar fixed to the viewport */
     top: 0; /* Align sidebar to the top of the viewport */
