scrolling thing fixed

--- a/frontend/templates/dashboard/dashboard.html
+++ b/frontend/templates/dashboard/dashboard.html
@@ -167,16 +167,8 @@
   }
   
   .sidebar {
-    top: 50px;
-    height: 100%; /* Set sidebar height to fill available space */
     position: fixed; /* Position the sidebar fixed to the viewport */
-    top: 0; /* Align sidebar to the top of the viewport */
-    left: 0; /* Align sidebar to the left of the viewport */
-    width: 253px; /* Set sidebar width */
-    background-color: #f8f9fa; /* Set background color */
-    padding: 20px; /* Add padding for content inside the sidebar */
-    overflow-y: auto; /* Enable vertical scrolling if content exceeds sidebar height */
-    /* Add any additional styling as needed */
+    height : 100%;
   }
 
       
