--- a/frontend/templates/resumes/resumes.html
+++ b/frontend/templates/resumes/resumes.html
@@ -177,6 +177,10 @@
           display: flex;
           justify-content: center;
         }
+        .sidebar {
+          position: fixed; /* Position the sidebar fixed to the viewport */
+          height : 100%;
+        }
     </style>
 
     <!-- Custom styles for this template -->
