--- a/frontend/templates/resumes/create_resume.html
+++ b/frontend/templates/resumes/create_resume.html
@@ -7,7 +7,10 @@
 </head>
 <body>
     <h1>Create Resume for {{user}}</h1>
-
-    {{form}}
+    <form action="{% url 'resumes:resumes' %}" method="post">
+        {% csrf_token %}
+        {{form}}
+        <button type="submit">Submit</button>
+    </form>
 </body>
 </html>
