added icons in profile.html

--- a/frontend/templates/profile/profile.html
+++ b/frontend/templates/profile/profile.html
@@ -619,37 +619,36 @@
                 </div>
             </div>
         
-            <!-- Additional Box Below Left Box -->
+           <!-- Additional Box Below Left Box -->
 <div style="width: 48%; border: 1px solid #ccc; padding: 20px; margin-top: 20px;">
   <!-- Social Media Information -->
   <div style="text-align: center;">
       <!-- GitHub -->
-      <div style="display: flex; align-items: center; width: 200px; margin-bottom: 10px;">
-          <img src="github_logo.png" alt="GitHub Logo" style="width: 50px; height: 50px; margin-right: 10px;">
-          <span style="flex-grow: 1;">GitHub: <span id="github_username">github_username</span></span>
+      <div style="display: flex; align-items: center; justify-content: flex-end; width: 200px; margin-bottom: 10px;">
+        <link rel="shortcut icon" type="image/png" href="{% static 'app_icon.png' %}" />
+        <img src="{% static 'github-logo.png' %}" alt="GitHub Logo" style="width: 40px; height: 40px; margin-right: 10px;">
+          <span style="flex-grow: 1; text-align: right;">GitHub: <span id="github_username">github_username</span></span>
       </div>
 
-      <!-- Twitter -->
-      <div style="display: flex; align-items: center; width: 200px; margin-bottom: 10px;">
-          <img src="twitter_logo.png" alt="Twitter Logo" style="width: 50px; height: 50px; margin-right: 10px;">
-          <span style="flex-grow: 1;">Twitter: <span id="twitter_username">twitter_username</span></span>
+      <!-- X -->
+      <div style="display: flex; align-items: center; justify-content: flex-end; width: 200px; margin-bottom: 10px;">
+          <img src="{% static 'x-logo.png' %}" alt="X Logo" style="width: 40px; height: 40px; margin-right: 10px;">
+          <span style="flex-grow: 1; text-align: right;">X: <span id="x_username">x_username</span></span>
       </div>
 
       <!-- Instagram -->
-      <div style="display: flex; align-items: center; width: 200px; margin-bottom: 10px;">
-          <img src="instagram_logo.png" alt="Instagram Logo" style="width: 50px; height: 50px; margin-right: 10px;">
-          <span style="flex-grow: 1;">Instagram: <span id="instagram_username">instagram_username</span></span>
+      <div style="display: flex; align-items: center; justify-content: flex-end; width: 200px; margin-bottom: 10px;">
+        <img src="{% static 'insta-logo.png' %}" alt="X Logo" style="width: 40px; height: 40px; margin-right: 10px;">
+          <span style="flex-grow: 1; text-align: right;">Instagram: <span id="instagram_username">instagram_username</span></span>
       </div>
 
       <!-- Facebook -->
-      <div style="display: flex; align-items: center; width: 200px;">
-          <img src="facebook_logo.png" alt="Facebook Logo" style="width: 50px; height: 50px; margin-right: 10px;">
-          <span style="flex-grow: 1;">Facebook: <span id="facebook_username">facebook_username</span></span>
+      <div style="display: flex; align-items: center; justify-content: flex-end; width: 200px;">
+        <img src="{% static 'facebook-logo.png' %}" alt="X Logo" style="width: 40px; height: 40px; margin-right: 10px;">
+          <span style="flex-grow: 1; text-align: right;">Facebook: <span id="facebook_username">facebook_username</span></span>
       </div>
   </div>
 </div>
-                      
-
         </main>
       </div>
     </div>
