added testimonials and pictures in homepage

--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -260,19 +260,20 @@
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img src="https://cdn.vectorstock.com/i/preview-1x/66/14/default-avatar-photo-placeholder-profile-picture-vector-21806614.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Testimonial 1">
+        <img src="{% static 't11.png' %}" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Testimonial 1">
         <h2 class="fw-normal">Testimonial 1</h2>
-        <p>Some representative content for the first testimonial.</p>
+        <p>"ResumeHub has been an absolute game-changer for me in my job search journey"</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="https://cdn.vectorstock.com/i/preview-1x/66/14/default-avatar-photo-placeholder-profile-picture-vector-21806614.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Testimonial 2">
+        <img src="{% static 't2.png' %}" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Testimonial 2">
         <h2 class="fw-normal">Testimonial 2</h2>
-        <p>Some representative content for the second testimonial.</p>
+        <p>"Thanks to ResumeHub, crafting a standout resume has never been easier."
+        </p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <img src="https://cdn.vectorstock.com/i/preview-1x/66/14/default-avatar-photo-placeholder-profile-picture-vector-21806614.jpg" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Testimonial 3">
+        <img src="{% static 't3.png' %}" class="bd-placeholder-img rounded-circle" width="140" height="140" alt="Testimonial 3">
         <h2 class="fw-normal">Testimonial 3</h2>
-        <p>Some representative content for the third testimonial.</p>
+        <p>"I've gained a competitive edge in the job market, thanks to ResumeHub."</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
   
@@ -328,7 +329,7 @@
   <!-- FOOTER -->
   <footer class="container">
     <p class="float-end"><a href="#">Back to top</a></p>
-    <p>&copy; 2024 ResumeHub, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+    <p>&copy; 2024 ResumeHub, Inc.</p>
   </footer>
 </main>
 
@@ -337,7 +338,6 @@
       $('.carousel').carousel();
   });
 </script> > -->
-
 
     </body>
 </html>
