--- a/frontend/templates/boiler.html
+++ b/frontend/templates/boiler.html
@@ -475,13 +475,14 @@
                     class="nav-link d-flex align-items-center gap-2 active"
                     aria-current="page"
                     href="#"
+                    onclick="window.location.href='/dashboard.html'"
                   >
                     <svg class="bi"><use xlink:href="#house-fill"></use></svg>
                     Dashboard
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link d-flex align-items-center gap-2" href="#">
+                  <a class="nav-link d-flex align-items-center gap-2" href="#" onclick="window.location.href='/resumes'">
                     <svg class="bi"><use xlink:href="#file-earmark"></use></svg>
                     Resumes
                   </a>
