--- a/frontend/templates/accounts/signup.html
+++ b/frontend/templates/accounts/signup.html
@@ -42,7 +42,7 @@
 </head>
 <body class="text-center">
   <main class="form-signin">
-      <form action="dashboard.html">
+      <form action="profiles/create_profile.html">
       <img class="mb-4" src="https://shorturl.at/wDJ23" alt="" width="144" height="114">
       <h1 class="h3 mb-3 fw-normal">ResumeHub</h1>
 
@@ -55,7 +55,7 @@
        <!-- <label for="floatingPassword">Password</label> -->
       </div>
 
-      <button class="w-100 btn btn-lg btn-primary mb-3" type="submit">Sign in</button>
+      <button class="w-100 btn btn-lg btn-primary mb-3" type="submit" href="profiles/create_profile.html">Sign in</button>
 
       <div class="or-text">
         <pre> <font size=4.5> OR </font> </pre>
