--- a/frontend/templates/homepage/index.html
+++ b/frontend/templates/homepage/index.html
@@ -209,7 +209,7 @@
                     <div class="carousel-caption text-start">
                         <h1>Sign Up</h1>
                         <p class="opacity-75">Join our platform today and start creating professional resumes, connecting with potential employers, and exploring job opportunities.</p>
-                        <p><a class="btn btn-lg btn-primary" href="login.html">Sign Up</a></p>
+                        <p><a class="btn btn-lg btn-primary" href="/signup.html">Sign Up</a></p>
                     </div>
                 </div>
             </div>
